--- a/.github/workflows/holon-trigger.yml
+++ b/.github/workflows/holon-trigger.yml
@@ -25,6 +25,6 @@ jobs:
     with:
       # Keep config minimal; holon-solve derives issue_number/comment_body/mode/output_dir from the event.
       log_level: 'debug'
-      ref: ${{ github.event.pull_request.html_url || github.event.issue.html_url }}
+      issue_number: ${{ github.event.issue.number || github.event.pull_request.number }}
       comment_id: ${{ github.event.comment.id }}
     secrets: inherit
